2009-07-14
- play with some tint2conf code

2009-07-04
- fixed 'defunct' process after fork

----------------------------------------------------------------
2009-06-30  thilor77 <lorthiois@bbsoft.fr>
released tint-0.7

2009-06-29
- fixed bug when active window draged to another desktop

2009-06-29
- fixed issue 110 and issue 107

2009-06-25
- improve user's message when compiled with --disable-battery
- replace 'task_width = width' by 'task_maximum_size = width height'
  width will be used in horizontal panel
  height will be used in vertical panel

2009-06-24
- vertical panel done
  user's parameters :
  1) add 'vertical' to panel_position (panel_position = center left vertical)
  2) use 'task_width' to define the task height (task_width = 30)
  3) adjust paddingy on task and systray wiil define the size of icons
  all others parameters are automatically converted by tint2
  (x padding become y padding, width become height ...)
  so user's change between horizontal and vertical are minimised.

2009-06-23
- play with vertical panel
  check sample file tintrc05 and tintrc06
  more change to come...

2009-06-21
- play with some code for vertical panel

2009-06-20
- remove flickering on systray

2009-06-20
- 'urgent_nb_of_blink' allow to choose the number of blink

2009-06-19
- change systray code. fixed issue 91.

2009-06-18
- patch by Christian Ruppert, configure option for battery

2009-06-14
- revert r78, fixed issue 100

2009-06-13
- fixed background refresh on systray

2009-06-09
- fixed issue 98

2009-06-08
- fixed issue 97 and issue 95

2009-06-08
- allow 'taskbar_mode = multi_desktop' config with 'panel_monitor = all'

2009-06-07
- merge autotool build system by Christian Ruppert

2009-06-06
- fixed issue 56 : with windowmaker
  bug in windowmaker : send unecessary 'desktop changed' each time focus changed

2009-06-06
- add 'wm_menu' config option to disable window manager's menu
  if you don't specify "wm_menu = ", the default value will show WM menu.
